--- a/index.html
+++ b/index.html
@@ -5,11 +5,19 @@
         <title>Document</title>
     </head>
     <body>
-	<div id="map" style="width:100%; height:100%; position:absolute;"></div>
-	<script src="http://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
-	<script src="js/map.js"></script>
+	<div style="position: absolute;">
+	    <ul>
+		<li id="l1">1</li>
+		<li id="l2">2</li>
+		<li id="l3">3</li>
+		<li id="l4">routeTool</li>
+	    </ul>
+	</div>
+	<div id="map" style="right:0; width:70%; height:100%; position:absolute;"></div>
+	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.js"></script>
+	<script src="js/map.js"></script>
     </body>
 
 </html>
