--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <div class="recommend scrollable">
                         <h2>Рекомендуемые</h2>
-                        <li>
+                        <li class="item">
                             <a href="#" class="row">
                                 <img src="http://www.irkutsk.lusya.com/upload/catalog/ru/3496/13223927455.jpg" class="col-md-4 pull-left">
                                     <h5>Place1</h5>
@@ -58,7 +58,7 @@
                                 
                             </a>
                         </li>
-                        <li>
+                        <li class="item">
                             <a href="#" class="row">
                                 <img src="https://media-cdn.tripadvisor.com/media/photo-p/0b/65/3d/fc/photo1jpg.jpg" class="col-md-4 pull-left">
                                     <h5>Place2</h5>
@@ -116,8 +116,8 @@
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.js"></script>
-	<script src="js/map.js"></script>
-
+	<script src="js/search.js"></script>
+		<script src="js/map.js"></script>
     </body>
 
 </html>
