dev(hotels): add hotels loading

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <link href="css/map.css" rel="stylesheet">
         <link href="css/search.css" rel="stylesheet">
 	<link href="css/viewContainer.css" rel="stylesheet">
-	
+
     </head>
     <body data-spy="scroll" data-target=".scrollable" data-offset="50">
 	<div id="viewContainer"></div>
@@ -59,7 +59,7 @@
                                     <h5>Place1</h5>
                                 </img>
                                 <p class="col-md-8">For example, when throwing two dice, the outcome of any particular roll is unpredictable, but a sum of 7 will occur twice as often as 4.</p>
-                                
+
                             </a>
                         </li>
                         <li class="item">
@@ -121,10 +121,11 @@
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.js"></script>
+  <script src="js/lodash.min.js"></script>
 	<script src="js/search.js"></script>
 	<script src="js/custom_view.js"></script>
 	<script src="js/map.js"></script>
-	<script src="js/hotel.js"></script>		
+	<script src="js/hotel.js"></script>
     </body>
 
 </html>
