something night work

--- a/index.html
+++ b/index.html
@@ -11,9 +11,13 @@
         <link href="css/sidebar.css" rel="stylesheet">
         <link href="css/map.css" rel="stylesheet">
         <link href="css/search.css" rel="stylesheet">
+	<link href="css/viewContainer.css" rel="stylesheet">
+	
     </head>
     <body data-spy="scroll" data-target=".scrollable" data-offset="50">
+	<div id="viewContainer"></div>
 	<div style="position: absolute;">
+
         <div id="wrapper">
             <!-- Sidebar -->
             <div id="sidebar-wrapper">
@@ -110,6 +114,7 @@
 
         <div id="map"></div>
 
+
     </div>
     <!-- /#wrapper -->
 
@@ -117,7 +122,9 @@
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.js"></script>
 	<script src="js/search.js"></script>
-		<script src="js/map.js"></script>
+	<script src="js/custom_view.js"></script>
+	<script src="js/map.js"></script>
+	<script src="js/hotel.js"></script>		
     </body>
 
 </html>
