dev(hotels) change points on placemarks

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
 	<script src="js/search.js"></script>
 	<script src="js/custom_view.js"></script>
 	<script src="js/map.js"></script>
-	<script src="js/hotel.js"></script>
+	<script src="js/hotels.js"></script>
     </body>
 
 </html>
