--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
         <link href="css/sidebar.css" rel="stylesheet">
         <link href="css/map.css" rel="stylesheet">
         <link href="css/search.css" rel="stylesheet">
+        <link href="css/jquery-ui.css" rel="stylesheet">
+
 	<link href="css/viewContainer.css" rel="stylesheet">
 
     </head>
@@ -22,35 +24,27 @@
             <!-- Sidebar -->
             <div id="sidebar-wrapper">
                 <ul class="sidebar-nav">
-                    <div class="input-group" id="adv-search">
-                        <input type="text" class="form-control" placeholder="Поиск..." />
-                        <div class="input-group-btn">
-                            <div class="btn-group" role="group">
-                                <div class="dropdown dropdown-lg">
-                                    <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown" aria-expanded="false"><span class="caret"></span></button>
-                                    <div class="dropdown-menu dropdown-menu-right" role="menu">
-                                        <form class="form-horizontal" role="form">
-                                          <div class="form-group">
-                                            <label for="filter">Сортировать по</label>
-                                            <select class="form-control">
-                                                <option value="0" selected>Популярности</option>
-                                                <option value="1">Цене</option>
-                                            </select>
-                                          </div>
-                                          <div class="form-group">
-                                            <label for="filter">Категория</label>
-                                            <select class="form-control">
-                                                <option value="0" selected>Кафе/рестораны</option>
-                                                <option value="1">Музеи</option>
-                                            </select>
-                                          </div>
-                                        </form>
-                                    </div>
-                                </div>
-                                <button type="button" class="btn btn-primary"><span class="glyphicon glyphicon-search" aria-hidden="true"></span></button>
-                            </div>
+                    <div class="input-group row" id="adv-search">
+                        <div class="form-group col-md-10">
+                            <select class="form-control">
+                                <option value="0" selected>Кафе/рестораны</option>
+                                <option value="1">Музеи</option>
+                                <option value="2">Театры</option>
+                            </select>
                         </div>
+                        <button type="button" class="btn btn-primary col-md-2">
+                            <span class="glyphicon glyphicon-search" aria-hidden="true"></span>
+                        </button>
                     </div>
+
+                    <div id="slider-group">
+                        <p>
+                            <label for="amount">Цена:</label>
+                            <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+                        </p>
+                        <div id="slider"></div>
+                    </div>
+                    
                     <div class="recommend scrollable">
                         <h2>Рекомендуемые</h2>
                         <li class="item">
@@ -121,11 +115,14 @@
 	<script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU" type="text/javascript"></script>
 	<script src="js/jquery.js"></script>
 	<script src="js/bootstrap.js"></script>
-  <script src="js/lodash.min.js"></script>
+    <script src="js/lodash.min.js"></script>
 	<script src="js/search.js"></script>
 	<script src="js/custom_view.js"></script>
 	<script src="js/map.js"></script>
 	<script src="js/hotels.js"></script>
+    <script src="js/jquery-ui.js"></script>
+    <script src="js/slider.js"></script>
+
     </body>
 
 </html>
